--- a/styles.css
+++ b/styles.css
@@ -11,32 +11,31 @@ body {
 .top-section {
     display: flex;
     align-items: center;
-    height: auto;
+    height: 100px;
     width: 100%;
     padding: 10px;
-
     background-color: #800000; /* Maroon background */
     color: #FFFFFF; /* White text */
-
-    /*padding: 20px 0; */
     border-bottom: 2px solid #ccc;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .university-logo {
-    height: 100px;
+    height: 100%;
     width: auto;
-    margin-right: 10px;
+    margin-right: 15px;
+}
+
+.top-banner {
+    flex: 1;
+    height: 100%;
+    object-fit: cover;
 }
 
 .top-section h1 {
     font-size: 2rem;
     margin: 0;
-}
-
-.top-banner {
-    flex: 1;
-    height: 100px;
-    object-fit: cover;
 }
 
 /* Main Container */
