--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     height: 100px;
     width: 100%;
     padding: 10px;
-    background-color: #800000; /* Maroon background */
+    /*background-color: #800000; Maroon background */
     color: #FFFFFF; /* White text */
     border-bottom: 2px solid #ccc;
     box-sizing: border-box;
