--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 .university-logo {
     height: auto;
-    max-height: 100%;
+    max-height: auto;
     width: auto;
     object-fit: contain;
     margin-right: 10px;
