--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ body {
     background-color: #800000; /* Maroon background */
     color: #FFFFFF; /* White text */
     margin-left: 15px;
+    margin-right: 20px;
     padding: 20px;
     box-sizing: border-box;
 }
