--- a/styles.css
+++ b/styles.css
@@ -36,10 +36,10 @@ body {
 }
 
 
-.top-section h1 {
+/*.top-section h1 {
     font-size: 2rem;
     margin: 0;
-}
+}*/
 
 /* Main Container */
 .container {
