--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,6 @@ body {
     max-width: 100%; /* Prevent overflow */
 }
 
-
-/*.top-section h1 {
-    font-size: 2rem;
-    margin: 0;
-}*/
-
 /* Main Container */
 .container {
     display: flex;
@@ -53,6 +47,7 @@ body {
     background-color: #800000; /* Maroon background */
     color: #FFFFFF; /* White text */
     margin-left: 30px;
+    margin-right: 30px;
     padding: 20px;
     box-sizing: border-box;
 }
