--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
 
 /* Left Sidebar */
 .sidebar {
-    width: auto;
+    width: 250px;
     background-color: #800000; /* Maroon background */
     color: #FFFFFF; /* White text */
     margin-right: 30px;
