--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
 /* Left Sidebar Navigation */
 .sidebar {
     width: 250px;
-    background: transparent; /* Darker maroon */
+    background: #f9e4e4; /* Darker maroon */
     padding: 1.5rem 0;
     box-shadow: inset -5px 0 10px rgba(0,0,0,0.2);
 }
