--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
 /* Left Sidebar Navigation */
 .sidebar {
     width: 250px;
-    background: #f9e4e4; /* Darker maroon */
+    background: transparent; /* Darker maroon */
     padding: 1.5rem 0;
     box-shadow: inset -5px 0 10px rgba(0,0,0,0.2);
 }
@@ -103,7 +103,7 @@ body {
 }
 
 .sidebar a {
-    background-color: var(--maroon);
+    background-color: #091ee0;
     color: var(--text-light);
     padding: 0.9rem 1.5rem;
     border-radius: 6px;
