--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ body {
 }
 
 .sidebar a {
-    background-color: #01083f;
+    background-color: #560303;
     color: var(--text-light);
     padding: 0.9rem 1.5rem;
     border-radius: 6px;
@@ -320,6 +320,7 @@ footer::before {
     
     .sidebar a {
         padding: 0.5rem 1rem;
+        font-size: 1.2rem;
         border-left: none;
         border-bottom: 3px solid transparent;
     }
