--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ body {
 }
 
 .sidebar a {
-    background-color: #360101;
+    background-color: #8d0303;
     color: var(--text-light);
     padding: 0.9rem 1.5rem;
     border-radius: 6px;
