--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 .top-section {
     /* background: linear-gradient(to right, var(--dark-maroon), var(--maroon)); */
     background: #333333;
-    color: #000000; /* Force black text */
+    color: #f5efef; /* Force black text */
     padding: 1.5rem 2rem;
     position: relative;
     z-index: 2;
