--- a/styles.css
+++ b/styles.css
@@ -205,15 +205,15 @@ body {
 }
 
 .phd-info {
-    font-size: 0.85rem;
+    font-size: 0.78rem;
     font-weight: 500;
     color: #000000;
-    margin: -0.3rem 0 0.8rem;
+    margin: 0.4rem 0;
     text-align: center;
 }
 
 .phd-info i {
-    margin-right: 0.4rem;
+    margin-right: 0.5rem;
     color: #000000; /* matches the maroon theme */
 }
 
